# zygisk-gadget

./: .gitignore  CMakeLists.txt  README.md  build.sh  clear.sh  module.conf  module.gradle
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle
module/src/main/cpp/tool/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/include/: logcat.h.in
src/tool/: CMakeLists.txt
template/magisk_module/: config  frida-gadget.config
ui/: README.md  build.gradle  local.properties  settings.gradle
ui/app/: build.gradle
ui/app/src/main/: AndroidManifest.xml
ui/app/src/main/java/com/example/sample/settings/: AppsAdapter.java  AppsFragment.java  ConfigStore.java  MainActivity.java  MainPagerAdapter.java  OptionsFragment.java  RootShell.java  SharedViewModel.java
ui/app/src/main/res/layout/: activity_main.xml  fragment_apps.xml  fragment_options.xml  item_app.xml
ui/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
